[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tax-advisor-env"
version = "1.0.0"
description = "A real-world OpenEnv-compliant tax filing environment"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.openenv]
name = "tax-advisor-env"
version = "1.0.0"
entry_point = "env:TaxAdvisorEnv"
tasks = [0, 1, 2]
